--- a/client/src/components/createEvent/createEvent.css
+++ b/client/src/components/createEvent/createEvent.css
@@ -18,6 +18,7 @@
 
 .createEventForm {
   position: absolute;
+  z-index: 50;
   width: clamp(300px, 50%, 500px);
   height: 500px;
   background-color: #ffcac9;
@@ -355,18 +356,148 @@
   padding: 10px;
   grid-row-start: 2;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(100px, 300px));
-  grid-template-rows: repeat(auto-fit, 200px);
+  grid-template-columns: repeat(auto-fit, minmax(100px, 350px));
+  grid-template-rows: repeat(auto-fit, 250px);
   gap: 10px;
+  justify-content: center;
+  margin-top: 15px;
 }
 
 .event {
-  display: flex;
-  flex-direction: column;
-  border: 2px solid black;
+  /* border: 2px solid black; */
+  box-shadow: 0px 0px 5px black;
   color: white;
-  background-color: black;
-  padding: 15px;
-  border-radius: 15px;
+  background-color: rgb(223, 144, 144);
+  padding: 5px 15px;
+  border-radius: 25px;
   overflow-wrap: break-word;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+}
+
+.eventTitle {
+  grid-row-start: 2;
+  grid-column: 1/-1;
+  font-family: "Open Sans", sans-serif;
+  font-weight: 700;
+  align-self: center;
+  justify-self: center;
+}
+
+.eventDesc {
+  justify-self: center;
+  grid-row-start: 3;
+  font-family: "Open Sans", sans-serif;
+  font-weight: 500;
+  /* align-self: center; */
+  grid-column: 1/-1;
+}
+
+.eventDate {
+  justify-self: flex-end;
+  grid-row-start: 1;
+  align-self: center;
+  grid-column: 1/-1;
+  font-family: "Open Sans", sans-serif;
+  font-weight: 300;
+}
+
+.eventProgressWrap {
+  grid-row: 4;
+  gap: 3px;
+  grid-column: 1/-1;
+  display: grid;
+  grid-template-rows: 1fr 1fr 1fr;
+}
+
+.eventProgressBar {
+  height: 8px;
+  border-radius: 25px;
+  direction: rtl;
+  grid-row-start: 2;
+  position: relative;
+  z-index: 0;
+  overflow: hidden;
+  background-color: rgb(255, 255, 255);
+}
+
+.eventProgress {
+  position: absolute;
+  height: 10px;
+  left: -1px;
+  border-radius: 25px;
+  background-color: rgb(75, 164, 247);
+  transition: 0.25s ease-in-out;
+  top: 0;
+}
+
+.eventProgressWrap h4:nth-child(3) {
+  justify-self: right;
+}
+
+.eventProgressWrap h4 {
+  width: fit-content;
+}
+
+.eventImg {
+  border: 1px solid white;
+  border-radius: 100%;
+  width: 30px;
+  background-color: blue;
+  align-self: center;
+  aspect-ratio: 1/1;
+  grid-row-start: 1;
+  grid-column-start: 1;
+  justify-self: left;
+}
+
+.eventParticipants img {
+  border-radius: 50%;
+  width: 20px;
+  height: 20px;
+}
+
+.addParticipant {
+  margin-left: 10px;
+  width: 20px;
+  height: 20px;
+  transition: 0.25s ease-in-out;
+  cursor: pointer;
+}
+
+.addParticipant:hover {
+  color: green;
+}
+
+.inviteeCover {
+  position: absolute;
+  /* border: 2px solid black; */
+  border-radius: 25px;
+  background-color: black;
+}
+
+.invitee {
+  height: 40px;
+  border-bottom: 1px solid #e7ebee;
+  position: relative;
+  display: flex;
+  align-items: center;
+  transition: 0.2s ease-in-out;
+}
+/* .invitee:hover {
+  background-color: green;
+} */
+.invitee img {
+  width: 25px;
+  border-radius: 50%;
+  margin: 15px;
+}
+
+.invitee p {
+  width: 220px;
+  font-family: "Open Sans", sans-serif;
+  font-weight: 700;
+  font-size: 15px;
+  color: #597a96;
 }
