--- a/client/src/assets/css_group/header.module.css
+++ b/client/src/assets/css_group/header.module.css
@@ -5,8 +5,8 @@
   position: absolute;
   justify-content: space-between;
   display: flex;
-  top: 0px;
-  background: #ffffff; }
+  top: 0;
+  background: #cfcfcf; }
 
 :local .header img {
   width: 200px;
