--- a/client/src/assets/App.css
+++ b/client/src/assets/App.css
@@ -98,6 +98,7 @@
 
 .logoutPop {
   position: absolute;
+  z-index: 1000;
   border: 2px solid rgb(0, 0, 0);
   background-color: #5199ad;
   border-radius: 25px;
