--- a/client/src/assets/css_group/App.module.css
+++ b/client/src/assets/css_group/App.module.css
@@ -60,7 +60,7 @@
   grid-template-rows: 0.05fr 1fr;
 }
 
-:local .loggedInNavbar {
+:global .loggedInNavbar {
   padding: 0;
   margin: 0;
   grid-row-start: 1;
