--- a/client/src/assets/css_group/App.module.css
+++ b/client/src/assets/css_group/App.module.css
@@ -149,7 +149,7 @@
 
 /* Login button - start */
 
-:local .loginBtn {
+.loginBtn {
   width: 200px;
   height: 50px;
 }
@@ -159,12 +159,29 @@
 :local .btnWrap {
   grid-row-start: 3;
   grid-column-start: 2;
+  display: grid;
+  padding: 20px;
+  place-items: center;
+  /*outline: dashed 1px red; */
+}
+
+/* Login button - start */
+
+:local .loginBtn {
+  width: 250px;
+  height: 50px;
 }
 
 /* signUp button - start */
 
 :local .signupBtn {
-  width: 200px;
+  width: 250px;
+  height: 50px;
+  font: PP Neue Montreal
+}
+
+:local .dashboard_button_example {
+  width: 250px;
   height: 50px;
   font: PP Neue Montreal
 }
