--- a/client/src/components/logout/logout.module.css
+++ b/client/src/components/logout/logout.module.css
@@ -1,129 +1,18 @@
 /* Logout button - start */
+@import url("https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Open+Sans:wght@400;600;700&family=Roboto&display=swap");
 
 :local .logoutBtn {
   border: 1px solid rgb(0, 0, 0);
-  width: 50px;
+  width: 45px;
   margin: 0;
-  height: 50px;
-  border-radius: 25px;
-  background-image: url("https://cdn.discordapp.com/attachments/463174949310562304/1075952796660146196/IMG_3462.png");
-  background-size: cover;
-  min-width: 50px;
-  transition: 0.25s ease-in-out;
-  font-family: "PP Neue Montreal";
+  height: 45px;
 }
 
-:local .logoutBtnClicked {
-  border: 1px solid #00bdf1;
+:local .logoutBtn:hover {
+  opacity: 0.7;
 }
 
-:local .logoutBtn:hover,
-:local .logoutBtnClicked:hover {
-  opacity: 0.8;
-}
-
-:local .logoutPop {
-  position: absolute;
-  right: 10px;
-  margin-top: 10px;
-  grid-template-rows: 1fr 1fr 1fr;
-  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.363);
-  background-color: white;
-  border-radius: 25px;
-  display: flex;
-  flex-direction: column;
-}
-
-:local .logoutPop button p {
+:local div button {
+  font-size: 0.9rem;
   font-family: "Roboto", sans-serif;
-  font-weight: 500;
-  color: black;
-}
-
-:local .logoutPop button:hover {
-  background-color: rgba(8, 8, 8, 0.096);
-}
-
-:local .logoutBtnCover {
-  border-radius: 25px;
-  width: 50px;
-  margin-right: 10px;
-  margin-top: 10px;
-}
-
-:local .individualBtn {
-  background-color: transparent;
-  color: none;
-  border-radius: 25px;
-  display: flex;
-  align-items: center;
-  gap: 20px;
-  margin: 0;
-  transition: 0.25s ease-in-out;
-  cursor: pointer;
-}
-
-:local .individualBtn svg {
-  height: 15px;
-  color: black;
-  width: 15px;
-}
-
-/* Logout button - end */
-
-/* Login button - start */
-
-:local .loginBtn,
-:local .signupBtn {
-  transition: 0.25s ease-in-out;
-  width: 200px;
-  height: 50px;
-  font-family: "PP Neue Montreal";
-  background-color: black;
-}
-
-/* Login button - end */
-
-:local .btnWrap {
-  grid-row-start: 3;
-  grid-column-start: 2;
-  display: grid;
-  padding: 20px;
-  place-items: center;
-  /*outline: dashed 1px red; */
-}
-
-/* Login button - start */
-
-:local .loginBtn {
-  width: 250px;
-  height: 50px;
-}
-
-:local .signupBtn:hover,
-:local .loginBtn:hover {
-  opacity: 0.8;
-  /* signUp button - start */
-}
-
-:local .signupBtn {
-  width: 250px;
-  height: 50px;
-  font: PP Neue Montreal;
-}
-
-:local .dashboard_button_example {
-  width: 250px;
-  height: 50px;
-  font: PP Neue Montreal;
-}
-
-/* signUp button - end */
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
