--- a/client/src/components/header/header.module.css
+++ b/client/src/components/header/header.module.css
@@ -1,7 +1,7 @@
 :local .header {
   width: 100vw;
   height: 3.5rem;
-  position: fixed;
+  position: sticky;
   z-index: 9999;
   justify-content: space-between;
   align-items: center;
