--- a/client/src/assets/css_group/index.module.css
+++ b/client/src/assets/css_group/index.module.css
@@ -3,6 +3,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   overflow: hidden;
+  overflow-y: scroll;
 }
 
 #root {
