ensure no padding

--- a/client/src/assets/css_group/index.module.css
+++ b/client/src/assets/css_group/index.module.css
@@ -1,5 +1,6 @@
 body {
   margin: 0;
+  padding: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   overflow: hidden;
@@ -8,5 +9,7 @@ body {
 
 #root {
   height: 100vh;
+  margin: 0;
+  padding: 0;
   overflow: hidden;
 }
